# telia-rust

./: Cargo.toml  Dockerfile  build-arm.sh
src/: main.rs  test.rs
