[package]
name = "telia-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
select = "0.5.0"
tokio = { version = "1", features = ["full"] }
# openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "telia"
path = "src/main.rs"
test = false
bench = false